# dtb-parse

./: README.md  default.nix  dtb-parse.cabal  stack.yaml
.github/workflows/: main.yml
nix/: ci.nix  haskell.nix  sources.json
src/Data/: Dtb.hs
src/Data/Dtb/: LowLevel.hs  Parser.hs  Property.hs
test/: ParseSpec.hs
