name:                dtb-parse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/blitz/dtb-parse#readme
license:             LGPL-3.0
license-file:        LICENSE
author:              Julian Stecklina
maintainer:          js@alien8.de
copyright:           Copyright (c) 2020 Julian Stecklina
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:      -fwarn-unused-imports

source-repository head
  type:     git
  location: https://github.com/blitz/dtb-parse
