name:                dtb-parse
version:             0.0.1
synopsis:            Flattened Device Tree (DTB) Parsing
-- description:
homepage:            https://github.com/blitz/dtb-parse#readme
license:             LGPL-3.0
license-file:        LICENSE
author:              Julian Stecklina
maintainer:          js@alien8.de
copyright:           Copyright (c) 2020 Julian Stecklina
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Dtb
                     , Data.Dtb.LowLevel
                     , Data.Dtb.Parser
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , binary
                     , text
                     , containers
                     , megaparsec >= 9.0 && < 9.1
  default-language:    Haskell2010
  ghc-options:      -fwarn-unused-imports

test-suite dtb-parse-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      ParseSpec
  hs-source-dirs:     test
  build-depends:      base
                    , dtb-parse
                    , hspec
                    , file-embed
                    , bytestring
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -fwarn-unused-imports

source-repository head
  type:     git
  location: https://github.com/blitz/dtb-parse
