name:               dtb-parse
version:            0.0.1
synopsis:           Flattened Device Tree (DTB) Parsing
category:           Data
license:            LGPL-3
license-file:       LICENSE
copyright:          Copyright (c) 2020 Julian Stecklina
author:             Julian Stecklina
maintainer:         js@alien8.de
homepage:           https://github.com/blitz/dtb-parse#readme
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.10

source-repository head
  type:     git
  location: https://github.com/blitz/dtb-parse

library
  exposed-modules:  Data.Dtb
                    Data.Dtb.LowLevel
                    Data.Dtb.Parser
                    Data.Dtb.Property
  hs-source-dirs:   src
  build-depends:    base       >= 4.13.0 && < 4.15
                  , binary     >= 0.8.7 && < 0.9
                  , bytestring >= 0.10.10 && < 0.11
                  , containers >= 0.6.2 && < 0.7
                  , either     >= 5.0.0.0 && < 5.1
                  , megaparsec >= 9.0 && < 9.1
                  , text       >= 1.2.3 && < 1.3
  default-language: Haskell2010
  ghc-options:      -fwarn-unused-imports

test-suite dtb-parse-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      ParseSpec
  hs-source-dirs:     test
  build-depends:      base
                    , bytestring
                    , dtb-parse
                    , text
                    , file-embed >= 0.0.11.2 && < 0.1
                    , hspec      >= 2.7.4 && < 2.8
                    , either
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -fwarn-unused-imports
